--- a/contactlook.css
+++ b/contactlook.css
@@ -9,13 +9,20 @@ body, html {
 }
 
 body {
-	background: rgb(45,232,230); /* Old browsers */
-	background: -moz-linear-gradient(-45deg, rgba(45,232,230,1) 44%, rgba(35,137,245,1) 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(-45deg, rgba(45,232,230,1) 44%,rgba(35,137,245,1) 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(135deg, rgba(45,232,230,1) 44%,rgba(35,137,245,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2de8e6', endColorstr='#2389f5',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */;
+	background: rgb(45,232,255); /* Old browsers */
+	background: -moz-linear-gradient(-45deg, rgba(45,232,255,1) 44%, rgba(35,137,245,1) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(-45deg, rgba(45,232,255,1) 44%,rgba(35,137,245,1) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(135deg, rgba(45,232,255,1) 44%,rgba(35,137,245,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2de8ff', endColorstr='#2389f5',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 	background-repeat: no-repeat;
 	background-attachment: fixed;
+
+}
+
+@-webkit-keyframes opacity {
+    0%   { -webkit-filter: opacity(0); /* Google Chrome & Webkit Nightlies */}
+	 
+    100% { -webkit-filter: opacity(1); /* Google Chrome & Webkit Nightlies */ }
 }
 
 aside {
@@ -32,8 +39,20 @@ img {
 }
 
 .img-menu {
-  width: 40px;
+  width: 15vw;
   cursor: pointer;
+  position: fixed;
+  right: 0;
+  margin-right: 3vh;
+  z-index: 1000000;
+  background: #FF1953;
+  opacity: 0.7;
+  border-radius: 100%;
+
+}
+
+.img-menu-web {
+  display: none;
 }
 
 figure {
@@ -46,17 +65,22 @@ figcaption {
 
 nav {
   background: white;
+
 }
 
 .active {
-  position: absolute;
+  position: fixed;
   display: block;
-  background: rgba(255, 255, 255, 0.95);
-  width: 50%;
+  background: rgba(0, 0, 0, 0.95);
+  width: 100%;
+  height: 100%;
   left: 0;
   top: 0;
   height: 100%;
   z-index: 20000;
+    text-shadow: -1px 1px white;
+  padding-top: 30%;
+  -webkit-animation: opacity 2s 1;
 }
 
 ul {
@@ -64,6 +88,7 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+
 }
 
 ul li a {
@@ -73,18 +98,22 @@ ul li a {
   display: block;
   padding: 1.5em 3em;
   background-color: none;
+
 }
 
 .meni {
+	text-align: center;
   font-style: #FF8200;
   font-size: 1.5em;
   font-style: bold;
   max-height: 100vh;
+  
 }
 
 .meni-gumb {
   padding: 5vh;
   color: #32A5CC;
+  font-size: 1.5em;
 }
 
 main {
@@ -97,13 +126,6 @@ main {
 
 .img-main-logo{
   display: none;
-  max-width: 100%;
-  max-height: auto;
-  margin: auto;
-  margin-top: 2em;
-  text-align: center;
-  cursor: default;
-
 }
 
 h1 {
@@ -142,7 +164,8 @@ footer {
   padding-top: 5px;
   text-align: center;
   min-width: 13em;
-	background: white;
+  background: black;
+z-index: 10001;
 }
 
 .noga {
@@ -189,7 +212,9 @@ li {
   width: 10em;
   z-index: 30000;
   background-color: none;
-}
+  -webkit-filter: invert(100%); /* Safari 6.0 - 9.0 */
+  filter: invert(100%);
+ }
 
 .main-logo-head {
   display: none;
@@ -230,16 +255,21 @@ div.container {
   }
 
   figcaption {
-    padding-left: 1em;
+    display: none;
+  }
+
+  .img-menu-web {
     display: block;
+    padding-left: 2em;
     text-align: center;
-    font-size: 2.0em;
-    font-weight: bold;
     padding-top: 0;
     font-style: black;
     margin-top: 1em;
-    position: fixed;
-
+	position: fixed ;
+	width: 14em;
+	-webkit-filter: invert(1);
+	filter: invert(1);
+	cursor: initial;
   }
 
   .img-menu {
@@ -374,6 +404,7 @@ div.container {
     color: black;
     width: 200px;
 	text-shadow: -1px 1px white;
+	font-size: 0.8em;
   }
 
   .meni-gumb:hover{
