--- a/bandlookmain.css
+++ b/bandlookmain.css
@@ -132,11 +132,8 @@ h1 {
   margin: 0;
 }
 
-p {
-	display: none;
-}
 
-h5 {
+p {
   font-size: 14px;
   line-height: 1.5em;
   text-align: justify;
@@ -145,11 +142,11 @@ h5 {
   color: black;
   text-align: justify;
   text-shadow: none;
-  background:rgba(255,50,100,1); /* FF3.6-15 */
+  background:rgba(255,50,100,0); /* FF3.6-15 */
   border-radius: 5px;
   border-style: solid;
-  border-width: 2px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
+  border-width: 0px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.0), 0 6px 20px 0 rgba(0, 0, 0, 0.0);
 }
 
  .band-description {
@@ -157,7 +154,7 @@ h5 {
     grid-gap: 15px;
     background-color: none;
     padding: 0px;
-    padding-bottom: 3em;
+    padding-bottom: 2em;
   }
 
 footer {
@@ -236,8 +233,8 @@ position: relative;
 border-radius: 7px;
 margin-bottom: 2em;
   border-style: solid;
-  border-width: 5px;
-  border-bottom-width: 3px;
+  border-width: 0px;
+  border-bottom-width: 0px;
 
 }
 
@@ -253,6 +250,11 @@ h3 {
 
 h4 {
   display: none;
+}
+
+h5{
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
 
@@ -494,12 +496,12 @@ h5{
 
 p {
 	display: block;
-color: black;
+	color: black;
   margin-top: 2em;
   margin-left: 30px;
   margin-right: 30px;
   text-shadow: -1px 1px white;
-  text-align: center;
+  text-align: right;
   font-size: 20px;
   background-color: rgba(0,0,0,0.1);
   background: -moz-linear-gradient(top, rgba(30,87,153,0) 0%, rgba(255,250,75,0) 50%, rgba(255,250,75,1) 51%, rgba(255,250,75,1) 84%, rgba(255,250,75,0) 86%, rgba(255,250,75,0) 88%); /* FF3.6-15 */
