--- a/main.css
+++ b/main.css
@@ -26,7 +26,7 @@ background-repeat: no-repeat;
 
 
 .img-main-logo1 {
-  position: relative;
+  position: fixed;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -34,6 +34,7 @@ background-repeat: no-repeat;
   width: 50%;
   -webkit-animation: opacity 1s 1;
 }
+
 
 .overlay {
   height: 90%;
@@ -65,7 +66,7 @@ background-repeat: no-repeat;
   padding-right: 0px;
   text-decoration: none;
   font-size: 36px;
-  color: rgba(255,250,75, 0.95);
+  color: rgba(0,0,0, 0.95);
   display: block;
 }
 
@@ -127,7 +128,7 @@ ul li a {
   background: rgba(62,206,255, 0.2);
   border-radius: 5px;
   box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
-	text-shadow: 1px 1px black;
+	text-shadow: -1px 1px white;
 	-webkit-animation: opacity 4s 1;
   }
 
@@ -330,7 +331,7 @@ li {
     padding: 1em;
     color: black;
     width: auto;
-    text-shadow: 1px 1px black;
+    text-shadow: 1px 1px white;
     width: 15vw;
     background: rgba(62,206,255, 0.2);
     box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
@@ -392,7 +393,7 @@ li {
 
   .overlay a {
     text-decoration: none;
-    color: rgba(255,250,75, 0.95);
+    color: rgba(0,0,0, 0.95);
     display: block;
       }
 
