--- a/medialook.css
+++ b/medialook.css
@@ -141,15 +141,25 @@ p {
   line-height: 1.5em;
 }
 
-.kontakt {
+.media-cgp {
 padding: 1em;
-    background: rgba(255,250,75, 1);
-padding-bottom: 2em;
+margin-top: 1em;
+background: white;
 border-radius: 15px;
 margin: 0.5em;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-margin-top: 0;
+text-align: center;
+margin-bottom: 3em;
 }
+
+.linktext{
+  color: black;
+  text-decoration: none;
+  text-align: center;
+  padding-left: auto;
+  padding-right: auto;
+  padding-bottom: 1em;
+  }
 
 .cta {
   display: block;
@@ -161,8 +171,10 @@ margin-top: 0;
   text-align: center;
   font-weight: bold;
   border-radius: 4px;
-  margin: 2em 0;
+  margin: 2em;
 }
+
+
 
 footer {
   position: fixed;
@@ -230,8 +242,6 @@ li {
 }
 
 
-
-
 @media only screen and (min-width: 768px) {
 
   body {
@@ -259,11 +269,11 @@ li {
     padding-top: 0;
     font-style: black;
     margin-top: 1em;
-	position: fixed ;
-	width: 14em;
-	-webkit-filter: invert(1);
-	filter: invert(1);
-	cursor: initial;
+	  position: fixed ;
+   	width: 14em;
+	  -webkit-filter: invert(1);
+	  filter: invert(1);
+	  cursor: initial;
   }
 
   .img-menu {
@@ -271,14 +281,13 @@ li {
   }
 
   aside{
-    background: rgba(255, 255, 255, 0.15);
+    background: rgba(255, 62, 143, 0.08);
     padding: 0;
     min-height: 100px;
     margin-bottom: 0;
     max-width: 300px;
-    -webkit-transition: background 0.8s; /* For Safari 3.1 to 6.0 */
+	  -webkit-transition: background 0.8s; /* For Safari 3.1 to 6.0 */
     transition: background 0.8s;
-    height: 100vh;
 	  }
 
   aside:hover{
@@ -287,9 +296,8 @@ li {
 
   main {
     padding: 0em;
-    padding-top: 2em;
+    padding-top: 02em;
     background-size: 100%;
-
   }
 
   .main-display {
@@ -314,8 +322,6 @@ li {
     margin: 0;
   }
 
-
-
   ul {
     display: block;
     position: relative !important;
@@ -336,20 +342,6 @@ li {
     padding-bottom: 2em;
     background: none;
     border-radius: 25px;
-  }
-
-  .kontakt {
-    padding: 2em;
-    padding-top: 0;
-    padding-bottom: 0;
-    background: rgba(255, 63, 110, 1);
-    margin-bottom: 2em;
-    border-radius: 25px;
-    margin-left: 2em;
-    margin-right: 2em;
-    margin-top: 0;
-	  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
   }
 
   .noga-slike {
@@ -376,12 +368,13 @@ li {
     padding-right: 0em;
     padding-top: 0em;
     width: minmax(min-content, 300px);
-	   -webkit-transition: background 0.5s; /* For Safari 3.1 to 6.0 */
+	-webkit-transition: background 0.5s; /* For Safari 3.1 to 6.0 */
     transition: background 0.5s;
   }
 
   footer:hover{
-	   background: #44E863;
+	background: #44E863;
+
   }
 
   .noga-item-box {
@@ -426,6 +419,23 @@ li {
     display: grid;
     align-content: right;
     margin: auto;
+  }
+
+  .media-cgp {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-row-gap: 1em;
+    padding: 2em;
+    background: white;
+    padding-bottom: 2em;
+    border-radius: 15px;
+    margin: 0.5em;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-top: 1em;
+    margin-bottom: 2em;
+    margin-left: 2em;
+    margin-right: 2em;
+    text-align: center;
   }
 
   .img-main-logo {
