--- a/contactlook.css
+++ b/contactlook.css
@@ -143,12 +143,13 @@ p {
 
 .kontakt {
 padding: 1em;
-    background: rgba(255,250,75, 1);
+    background: white;
 padding-bottom: 2em;
 border-radius: 15px;
 margin: 0.5em;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 margin-top: 0;
+margin-bottom: 4em;
 }
 
 .cta {
@@ -342,7 +343,7 @@ li {
     padding: 2em;
     padding-top: 0;
     padding-bottom: 0;
-    background: rgba(255, 63, 110, 1);
+    background: white;
     margin-bottom: 2em;
     border-radius: 25px;
     margin-left: 2em;
