--- a/main.css
+++ b/main.css
@@ -124,7 +124,8 @@ ul li a {
 }
 
 .meni-gumb {
-	margin: 4vh;
+	margin: 3vh;
+  margin-top: 0vh;
   background: rgba(62,206,255, 0.2);
   border-radius: 5px;
   box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
