--- a/bandlookmain.css
+++ b/bandlookmain.css
@@ -47,10 +47,9 @@ img {
   background: #FF1953;
   opacity: 0.7;
   border-radius: 100%;
-    border-style: solid;
+  border-style: solid;
   border-width: 0px ;
   border-color: black;
-
 }
 
 .img-menu-web {
@@ -285,11 +284,11 @@ h5{
     padding-top: 0;
     font-style: black;
     margin-top: 1em;
-	position: fixed ;
-	width: 14em;
-	-webkit-filter: invert(1);
-	filter: invert(1);
-	cursor: initial;
+  	position: fixed ;
+  	width: 14em;
+  	-webkit-filter: invert(1);
+  	filter: invert(1);
+  	cursor: initial;
 	}
 
 
@@ -303,7 +302,7 @@ h5{
     min-height: 100px;
     margin-bottom: 0;
     max-width: 300px;
-	-webkit-transition: background 0.8s; /* For Safari 3.1 to 6.0 */
+	  -webkit-transition: background 0.8s; /* For Safari 3.1 to 6.0 */
     transition: background 0.8s;
     height: 100vh;
   }
@@ -371,7 +370,7 @@ h5{
   }
 
   footer:hover{
-	background: #44E863;
+	background: #FF1953;
 
   }
 
@@ -399,8 +398,8 @@ h5{
     color: black;
     width: 200px;
     text-shadow: -1px 1px white;
-	font-size: 0.8em;
-  text-align: left;
+	  font-size: 0.8em;
+    text-align: left;
   }
 
   .meni-gumb:hover{
@@ -445,7 +444,7 @@ h5{
     filter: grayscale(100%);
     transition: .8s ease;
     width: 10vw;
-	border-style: none;
+	  border-style: none;
   }
 
   .photo:hover {
@@ -472,19 +471,20 @@ h5{
     text-align: center;
     padding: 0px 0px;
     position: fixed;
-    background: rgb(77,235,255);
+    background: rgba(255,250,75, 1);
     overflow: hidden;
     width: 300px;
     height: 0;
-    color: white;
+    color: black;
     }
 
   h2{
-    text-shadow: -1px 1px black;
+    text-shadow: -3px 3px 2px white;
+    text-decoration-color: black;
     margin-top: 1.5em;
     padding-top: 1em;
     padding-bottom:1em;
-    background-color: rgba(0,0,0,0.1);
+    background-color: rgba(0,0,0,0.0);
   }
 
   h5{
@@ -499,15 +499,13 @@ h5{
     margin-top: 2em;
     margin-left: 30px;
     margin-right: 30px;
-    text-shadow: -1px 1px white;
-    text-align: left;
+    text-shadow: -1px 1px 3px white;
+    text-align: right;
     font-size: 20px;
-    background-color: rgba(0,0,0,0.1);
-    background: -moz-linear-gradient(top, rgba(30,87,153,0) 0%, rgba(255,250,75,0.01) 1%, rgba(255,250,75,1) 82%, rgba(255,250,75,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, rgba(30,87,153,0) 0%,rgba(255,250,75,0.01) 1%,rgba(255,250,75,1) 82%,rgba(255,250,75,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, rgba(30,87,153,0) 0%,rgba(255,250,75,0.01) 1%,rgba(255,250,75,1) 82%,rgba(255,250,75,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001e5799', endColorstr='#fffa4b',GradientType=0 ); /* IE6-9 */
+    background-color: rgba(0,0,0,0.0);
   }
+
+
 
   .fotka-clana:hover .container {
     left: 0;
@@ -543,19 +541,12 @@ h5{
 
   h3 {
     display: block;
-    background: -moz-linear-gradient(top, rgba(30,87,153,0) 0%, rgba(255,250,75,0) 50%, rgba(255,250,75,1) 51%, rgba(255,250,75,1) 84%, rgba(255,250,75,0) 86%, rgba(255,250,75,0) 88%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, rgba(30,87,153,0) 0%,rgba(255,250,75,0) 50%,rgba(255,250,75,1) 51%,rgba(255,250,75,1) 84%,rgba(255,250,75,0) 86%,rgba(255,250,75,0) 88%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, rgba(30,87,153,0) 0%,rgba(255,250,75,0) 50%,rgba(255,250,75,1) 51%,rgba(255,250,75,1) 84%,rgba(255,250,75,0) 86%,rgba(255,250,75,0) 88%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001e5799', endColorstr='#00fffa4b',GradientType=0 ); /* IE6-9 */
-	border-radius: 100%;
+    background: rgba(255,250,75, 1);
 	}
 
   h4 {
     display: block;
-    background: -moz-linear-gradient(top, rgba(30,87,153,0) 0%, rgba(255,255,255,0) 50%, rgba(255,255,255,1) 51%, rgba(255,255,255,1) 84%, rgba(255,255,255,0) 86%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, rgba(30,87,153,0) 0%,rgba(255,255,255,0) 50%,rgba(255,255,255,1) 51%,rgba(255,255,255,1) 84%,rgba(255,255,255,0) 86%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, rgba(30,87,153,0) 0%,rgba(255,255,255,0) 50%,rgba(255,255,255,1) 51%,rgba(255,255,255,1) 84%,rgba(255,255,255,0) 86%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001e5799', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
-  border-radius: 0;
+    background: white;
+    border-radius: 0;
 
   }
