--- a/main.css
+++ b/main.css
@@ -26,12 +26,12 @@ background-repeat: no-repeat;
 
 
 .img-main-logo1 {
-  position: fixed;
+  position: relative;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  top: -5vh;
-  width: 50%;
+  top: 5vh;
+  max-width: 70%;
   -webkit-animation: opacity 1s 1;
 }
 
@@ -130,7 +130,7 @@ ul li a {
   border-radius: 5px;
   box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
 	text-shadow: -1px 1px white;
-	-webkit-animation: opacity 4s 1;
+	-webkit-animation: opacity 3s 1;
   }
 
 main {
@@ -298,7 +298,7 @@ li {
       text-align: center;
       background: BLACK;
       z-index: 10001;
-     -webkit-animation: opacity 4s 1;
+     -webkit-animation: opacity 2.5s 1;
     }
 
 
@@ -321,7 +321,7 @@ li {
     text-align: center;
     background: none;
     z-index: 10001;
-   -webkit-animation: opacity 6s 1;
+   -webkit-animation: opacity 4s 1;
   }
 
   li.meni{
@@ -329,10 +329,11 @@ li {
   }
 
   .meni-gumb {
+    bottom: 0;
     padding: 1em;
     color: black;
     width: auto;
-    text-shadow: 1px 1px white;
+    text-shadow: -1px 1px white;
     width: 15vw;
     background: rgba(62,206,255, 0.2);
     box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
@@ -364,6 +365,14 @@ li {
     background-color: none;
       }
 
+  .noga-slike:hover{
+        -webkit-filter: invert(0%); /* Safari 6.0 - 9.0 */
+        filter: invert(0%);
+      }
+
+  footer:hover{
+     background: #FF1953;
+   }
 
 	.img-main-logo1 {
 	  position: relative;
@@ -381,7 +390,7 @@ li {
 .overlay-content {
   display: block;
   position: fixed;
-  top: 60%;
+  top: 70%;
   width: 100%;
   text-align: center;
   margin-top: 0px;
